Potential race in exit code used when shutting down server

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Minor - P4
    • 3.5.9
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • TIG 2017-06-19
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      It is possible that after the shutdown tasks complete for a thread that didn't call shutdown() first to exit with a different exit code than the thread that called shutdown() first. The logAndQuickExit(code) call when the shutdown tasks are already in progress should be changed to logAndQuickExit(shutdownExitCode.get()).

            Assignee:
            Max Hirschhorn
            Reporter:
            Max Hirschhorn
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: