SERVER-29380 Fix potential race in exit code during server shutdown.